--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -119,6 +119,7 @@ frameBufferEmulation\copyDepthToRDRAM=0
 [MARIOKART64]
 Good_Name=Mario Kart 64 (E)(J)(U)
 graphics2D\enableNativeResTexrects=1
+frameBufferEmulation\copyToRDRAM=1
 
 [MARIO%20STORY]
 Good_Name=Mario Story (J)
